@@ -264,10 +264,10 @@ static void vrpmlog (unsigned code, const char *fmt, va_list ap)
 	recs[nrecs].code = rec.code;
 	recs[nrecs].pri = rec.pri;
 	recs[nrecs].message = xstrdup(msgbuf);
-	recs[nrecs+1].code = 0;
-	recs[nrecs].pri = 0;
-	recs[nrecs+1].message = NULL;
 	++nrecs;
+	recs[nrecs].code = 0;
+	recs[nrecs].pri = 0;
+	recs[nrecs].message = NULL;
     }
 
     if (_rpmlogCallback) {
